--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -42,10 +42,10 @@ db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 #
-db.default.driver=org.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${MYSQL_ADDON_HOST}"/"${MYSQL_ADDON_DB}
-db.default.user=${MYSQL_ADDON_USER}
-db.default.password=${MYSQL_ADDON_PASSWORD}
+#db.default.driver=org.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://"${MYSQL_ADDON_HOST}"/"${MYSQL_ADDON_DB}
+#db.default.user=${MYSQL_ADDON_USER}
+#db.default.password=${MYSQL_ADDON_PASSWORD}
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
