--- a/test_1/.classpath
+++ b/test_1/.classpath
@@ -61,6 +61,7 @@
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.avaje.ebeanorm\avaje-ebeanorm\jars\avaje-ebeanorm-3.2.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.avaje.ebeanorm\avaje-ebeanorm-agent\jars\avaje-ebeanorm-agent-3.2.1.jar"/>
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.hibernate.javax.persistence\hibernate-jpa-2.0-api\jars\hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\mysql\mysql-connector-java\jars\mysql-connector-java-5.1.37.jar"/>
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.webjars\webjars-play_2.10\jars\webjars-play_2.10-2.2.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.webjars\requirejs\jars\requirejs-2.1.10.jar"/>
   <classpathentry kind="lib" path="C:\Users\Caio Tsubake\.ivy2\cache\org.webjars\webjars-locator\jars\webjars-locator-0.13.jar"/>
