--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -42,7 +42,7 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 #
-db.default.driver=org.mysql.jdbc.Driver
+db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://"${MYSQL_ADDON_HOST}"/"${MYSQL_ADDON_DB}
 db.default.user=${MYSQL_ADDON_USER}
 db.default.password=${MYSQL_ADDON_PASSWORD}
