--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -57,7 +57,7 @@ db.default.password=${MYSQL_ADDON_PASSWORD}
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 applyEvolutions.default=true
-applyDownEvolutions.default=true
+#applyDownEvolutions.default=true
 
 
 # Ebean configuration
