--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -42,10 +42,10 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 #
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${MYSQL_ADDON_HOST}"/"${MYSQL_ADDON_DB}
-db.default.user=${MYSQL_ADDON_USER}
-db.default.password=${MYSQL_ADDON_PASSWORD}
+db.default.driver=org.postgresql.jdbc.Driver
+db.default.url="jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}"/"${POSTGRESQL_ADDON_DB}
+db.default.user=${POSTGRESQL_ADDON_USER}
+db.default.password=${POSTGRESQL_ADDON_PASSWORD}
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
