--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -42,7 +42,7 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 #
-db.default.driver=org.postgresql.jdbc.Driver
+db.default.driver=com.postgresql.jdbc.Driver
 db.default.url="jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}"/"${POSTGRESQL_ADDON_DB}
 db.default.user=${POSTGRESQL_ADDON_USER}
 db.default.password=${POSTGRESQL_ADDON_PASSWORD}
