--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -47,6 +47,10 @@ db.default.url="jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}"/"${POSTGRESQL_ADDON
 db.default.user=${POSTGRESQL_ADDON_USER}
 db.default.password=${POSTGRESQL_ADDON_PASSWORD}
 
+db.default.partitionCount=2
+db.default.maxConnectionsPerPartition=2
+db.default.minConnectionsPerPartition=2
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
