--- a/test_1/conf/application.conf
+++ b/test_1/conf/application.conf
@@ -37,19 +37,19 @@ application.langs="en"
 
 
 
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 #
-#db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}"/"${POSTGRESQL_ADDON_DB}
-#db.default.user=${POSTGRESQL_ADDON_USER}
-#db.default.password=${POSTGRESQL_ADDON_PASSWORD}
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}"/"${POSTGRESQL_ADDON_DB}
+db.default.user=${POSTGRESQL_ADDON_USER}
+db.default.password=${POSTGRESQL_ADDON_PASSWORD}
 
-#db.default.partitionCount=2
-#db.default.maxConnectionsPerPartition=2
-#db.default.minConnectionsPerPartition=2
+db.default.partitionCount=2
+db.default.maxConnectionsPerPartition=2
+db.default.minConnectionsPerPartition=2
 
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
